add ebus dma controller, satsuma disk interface
also I/O operations can be asynchronous (e.g. don't finish instantly) via a command line option, to test asynchronous I/O kernel stuff later on

--- a/vm/README
+++ b/vm/README
@@ -2,6 +2,6 @@ some terms:
 	limn - CPU
 	kinnow - 8bit framebuffer
 	ebus - primary bus
-	citron - bus
+	citron - platformboard local bus
 	anamatsu - peripheral bus
-	ahdb - aisa hard disk bus
+	satsuma - hard disk bus
